force-app/main/default/objects/Quote/fields/PrimaryFacilitator__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFacilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Facilitator</label>
    <referenceTo>ProjectFacilitator__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>