force-app/main/default/objects/Quote/fields/ProgramGoal__c.field-meta.xml
<CustomField>
    <fullName>ProgramGoal__c</fullName>
    <label>Program Goal</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>