force-app/main/default/objects/Quote/fields/ProgramGoalTemplate__c.field-meta.xml
<CustomField>
    <fullName>ProgramGoalTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Goal Template</label>
    <referenceTo>Program_Goal_Template__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>